# libwpg

./: Makefile  README.md  libwpg.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  libwpg-0.1.pc.in  libwpg-stream-0.1.pc.in  libwpg-zip.in  libwpg.pc.in  libwpg.spec  libwpg.spec.in
src/docs/: Makefile.in
src/docs/doxygen/: Makefile.in  doxygen.cfg
src/inc/: Makefile.am  Makefile.in
src/inc/libwpg/: Makefile.am  Makefile.in  WPGraphics.h
src/src/: Makefile.in
src/src/conv/: Makefile.in
src/src/conv/raw/: Makefile.am  Makefile.in  wpg2raw.cpp
src/src/conv/svg/: Makefile.am  Makefile.in  wpg2svg.cpp
src/src/lib/: Makefile.am  Makefile.in  WPG1Parser.cpp  WPG1Parser.h  WPG2Parser.cpp  WPG2Parser.h  WPGBitmap.cpp  WPGBitmap.h  WPGColor.cpp  WPGColor.h  WPGDashArray.cpp  WPGHeader.cpp  WPGHeader.h  WPGInternalStream.h  WPGPaintInterface.h  WPGSVGGenerator.cpp  WPGSVGGenerator.h  WPGStreamImplementation.h  WPGXParser.cpp  WPGXParser.h  WPGraphics.cpp  WPGraphics.h  libwpg-stream.rc.in  libwpg.h  libwpg.h.in  makefile.mk
